banner section complate

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   </head>
   <body>
     <header>
+
+      <!-- navber section start here -->
       <nav class="flex items-center justify-between py-3 px-2">
 
         <!-- top section -->
@@ -92,6 +94,23 @@
           <div class="lg:hidden"><button class="btn"><i class="fa-solid fa-bars"></i></button></div>
         </div>
       </nav>
+
+      <!-- navber section end here -->
+
+
+      <!-- banner section start here -->
+       <section class="text-center py-6">
+        <div>
+          <img class="m-auto" src="./assets/banner.png" alt="">
+        </div>
+        <div class="py-4 px-1 ">
+          <h1 class="text-[28px] font-extrabold leading-[40px]  md:leading-[50px] text-3xl lg:text-5xl lg:leading-[60px]">A barn house of this design has a <br class="hidden lg:block"> striking appearance</h1>
+          <small class="text-[#494949] text-[16px] font-medium leading-[30px] ">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden lg:block">featuring weathered wood, sleek metal accents, and large windows that flood the space with <br class="hidden lg:block"> natural light.</small>
+          <div class="pt-5">
+            <button class="flex items-center m-auto gap-2 bg-bannerbtn rounded-full py-2 w-4/5 justify-center  px-5 md:w-1/4">View Details  <span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
+          </div>
+        </div>
+       </section>
     </header>
     <main></main>
     <footer></footer>
