--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </script>
   </head>
   <body>
-    <header>
+    <header class="bg-white">
 
       <!-- navber section start here -->
       <nav class="flex items-center justify-between py-3 px-2">
@@ -105,14 +105,68 @@
         </div>
         <div class="py-4 px-1 ">
           <h1 class="text-[28px] font-extrabold leading-[40px]  md:leading-[50px] text-3xl lg:text-5xl lg:leading-[60px]">A barn house of this design has a <br class="hidden lg:block"> striking appearance</h1>
-          <small class="text-[#494949] text-[16px] font-medium leading-[30px] ">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden lg:block">featuring weathered wood, sleek metal accents, and large windows that flood the space with <br class="hidden lg:block"> natural light.</small>
+          <small class="text-[#494949] text-[16px] font-medium leading-[30px]  ">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden lg:block">featuring weathered wood, sleek metal accents, and large windows that flood the space with <br class="hidden lg:block"> natural light.</small>
           <div class="pt-5">
             <button class="flex items-center m-auto gap-2 bg-bannerbtn rounded-full py-2 w-4/5 justify-center  px-5 md:w-1/4">View Details  <span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
           </div>
         </div>
        </section>
     </header>
-    <main></main>
+    <main>
+
+      <!-- We design thoughtful, liveable spaces section start here -->
+      <section class="bg-#F4F4F4 px-5 pb-12">
+        <div class="pt-5 hidden lg:block">
+         <img src="./assets/Vector.png" alt="">
+        </div>
+       <section class=" flex gap-3 justify-between pt-6  flex-col lg:flex-row lg:mx-14 ">
+
+        <!-- fast section here -->
+        <div>
+          <!-- fast card here -->
+          <div class="">
+            <div class="text-center  lg:text-left">
+              <span class="flex items-center gap-2 py-2 px-3 btn bg-[#FFF] rounded-full md:justify-center m-auto "><i class="fa-solid fa-arrow-right"></i><small>About Us</small></span>
+            </div>
+           <div class="text-center pt-6 lg:text-left">
+            <h1 class="text-2xl font-extrabold pb-4 lg:text-4xl">We design thoughtful, <br class="hidden lg:block"> liveable spaces</h1>
+            <small class="text-[16px] font-medium leading-7">The barn house captivates with its blend of rustic charm and <br class="hidden lg:block">
+           modern sophistication, featuring weathered wood, sleek metal accents.</small>
+           </div>
+          </div>
+
+        <div class="md:flex items-center gap-3 pt-7 lg:flex-col">
+            <!-- mid card here -->
+            <div class="flex  gap-3 bg-[#FFF] rounded-xl py-6 px-4 lg:items-center lg:py-8 lg:px-8">
+              <div><img src="./assets/commercial.png" alt=""></div>
+              <div>
+                <h1 class="text-2xl font-extrabold pb-2">Commercial</h1>
+                <small>The barn house captivates with its blend of rustic charm and modern.</small>
+              </div>
+             </div>
+  
+  
+             <!-- bottom card here -->
+             <div class="flex  gap-3 bg-[#FFF] rounded-xl my-10 py-6 px-4 lg:items-center lg:py-8 lg:px-8 ">
+              <div>
+                <img src="./assets/residential.png" alt="">
+              </div>
+              <div>
+                <h1 class="text-2xl font-extrabold pb-2">Residential</h1>
+                <small>The barn house captivates with its blend of rustic charm and modern.</small>
+              </div>
+             </div>
+        </div>
+        </div>
+
+
+        <!-- bottom section here -->
+        <div>
+          <img  class="m-auto" src="./assets/Rectangle.png" alt="">
+        </div>
+       </section>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
