--- a/index.html
+++ b/index.html
@@ -261,41 +261,51 @@
 
 
 
-        <section class="grid grid-cols-1 items-center gap-4 my-8 md:grid-cols-4 px-2 md:px-8 ">
+        <section class="grid grid-cols-1 items-center py-8 gap-4 my-8 md:grid-cols-4 px-2 md:px-8 ">
           <div class="col-span-1 md:col-span-4 lg:col-span-3">
             <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl flex items-center gap-2 flex-col md:flex-row ">
-              <div class=" w-full py-4 px-4">
-                <img class="m-auto" src="./assets/img1.png" alt="">
+              <div class=" w-full py-4 px-4 ">
+                <img class="m-auto lg:mr-48" src="./assets/img1.png" alt="">
               </div>
-              <div>
+              <div class="px-4 py-4 md:mr-[200px]">
                 <h1 class="text-2xl font-extrabold ">Commercial</h1>
                 <p class="text-[16px] leading-8">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
-                  <div class="px-4">
+                  <div class="">
                     <button class=" flex items-center gap-2 text-[20px] font-extrabold">View Details <span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
                   </div>
                 </p>
               </div>
           </div>
         </div>
+
+
         <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 md:col-span-2 lg:col-span-1 " ><div >
-          <img class=" h-[180px]"  src="./assets/img2.png" alt="">
+          <img class=" w-full lg:h-[200px]"  src="./assets/img2.png" alt="">
         </div></div>
-          <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 md:col-span-2 lg:col-span-1" ><img class=" w-full" src="./assets/img3.png" alt=""></div>
+
+
+          <div class="border border-[#E9E9E9] bg-[#FFF] w-full rounded-2xl py-4 px-6 md:col-span-2 lg:col-span-1" ><img class="w-full " src="./assets/img3.png" alt=""></div>
+
+
           <div class="col-span-1 md:col-span-4 lg:col-span-2 border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6">
-            <div class="flex items-center gap-6 flex-col md:flex-row">
-              <div class="w-full">
-                <img class=" m-auto w-full" src="./assets/img4.png" alt="">
+            <div class="flex items-center gap-4 py-4
+             flex-col md:flex-row">
+              <div class="w-5/6">
+                <img class=" " src="./assets/img4.png" alt="">
               </div>
-              <div>
-                <h1 class="text-2xl font-extrabold py-4 px-4">Commercial</h1>
-                <p class="text-[16px] leading-8 px-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
-                  <div class="px-4">
+              <div class="px-4">
+                <h1 class="text-2xl font-extrabold ">Commercial</h1>
+                <p class="text-[16px] leading-8 ">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
+                  <div class="">
                     <button class=" flex items-center gap-2 text-[20px] font-extrabold">View Details <span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
                   </div>
                 </p>
               </div>
             </div>
           </div>
+
+
+
           <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 w-full md:col-span-2 lg:col-span-1"><img class=" w-full" src="./assets/img5.png" alt=""></div>
 
           <div class="hidden md:block col-span-2 w-full border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 lg:hidden">
