--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 
       <!-- Portfolio section -->
       <section class="bg-[#F4F4F4] lg:bg-white">
-        <div class="text-center pt-20 ">
-          <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2 px-5  m-auto"><i class="fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
+        <div class="text-center pt-20 px-5">
+          <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2   m-auto"><i class="fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
           <h1 class="text-2xl font-extrabold my-4 md:text-3xl lg:text-4xl">Our Latest Portfolio</h1>
           <p>The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
         </div>
@@ -261,8 +261,8 @@
 
 
 
-        <section class="grid grid-cols-1 items-center py-8 gap-4 my-8 md:grid-cols-4 px-2 md:px-8 ">
-          <div class="col-span-1 md:col-span-4 lg:col-span-3">
+        <section class="grid grid-cols-1 items-center py-8 gap-4 my-8 md:grid-cols-6 px-2 md:px-8 ">
+          <div class="col-span-1 md:col-span-6 lg:col-span-4">
             <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl flex items-center gap-2 flex-col md:flex-row ">
               <div class=" w-full py-4 px-4 ">
                 <img class="m-auto lg:mr-48" src="./assets/img1.png" alt="">
@@ -279,15 +279,15 @@
         </div>
 
 
-        <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 md:col-span-2 lg:col-span-1 " ><div >
-          <img class=" w-full lg:h-[200px]"  src="./assets/img2.png" alt="">
+        <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 md:col-span-3 lg:col-span-2 " ><div >
+          <img class=" w-full  md:h-[240px] lg:h-[200px]"  src="./assets/img2.png" alt="">
         </div></div>
 
 
-          <div class="border border-[#E9E9E9] bg-[#FFF] w-full rounded-2xl py-4 px-6 md:col-span-2 lg:col-span-1" ><img class="w-full " src="./assets/img3.png" alt=""></div>
+          <div class="border border-[#E9E9E9] bg-[#FFF] w-full rounded-2xl py-4 px-6 md:col-span-3 lg:col-span-1" ><img class="w-full lg:h-[200px]" src="./assets/img3.png" alt=""></div>
 
 
-          <div class="col-span-1 md:col-span-4 lg:col-span-2 border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6">
+          <div class="border border-[#E9E9E9] bg-[#FFF] px-6 rounded-2xl py-4 col-span-1  md:col-span-6 lg:col-span-4  ">
             <div class="flex items-center gap-4 py-4
              flex-col md:flex-row">
               <div class="w-5/6">
@@ -306,10 +306,10 @@
 
 
 
-          <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 w-full md:col-span-2 lg:col-span-1"><img class=" w-full" src="./assets/img5.png" alt=""></div>
+          <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 w-full md:col-span-3 lg:col-span-1"><img class=" w-full lg:h-[200px]" src="./assets/img5.png" alt=""></div>
 
-          <div class="hidden md:block col-span-2 w-full border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 lg:hidden">
-            <img class="w-full" src="./assets/img3.png" alt="">
+          <div class="hidden md:block col-span-3 w-full border border-[#E9E9E9] bg-[#FFF] rounded-2xl py-4 px-6 lg:hidden">
+            <img class="w-full " src="./assets/img3.png" alt="">
           </div>
         </section>
 
