Read Our Articles and News section here

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <!-- Portfolio section -->
       <section class="bg-[#F4F4F4] lg:bg-white">
         <div class="text-center pt-20 px-5">
-          <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2   m-auto"><i class="fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
+          <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2 px-5   m-auto"><i class="fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
           <h1 class="text-2xl font-extrabold my-4 md:text-3xl lg:text-4xl">Our Latest Portfolio</h1>
           <p>The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
         </div>
@@ -261,7 +261,7 @@
 
 
 
-        <section class="grid grid-cols-1 items-center py-8 gap-4 my-8 md:grid-cols-6 px-2 md:px-8 ">
+        <section class="grid grid-cols-1 items-center py-12 gap-4 my-8 md:grid-cols-6 px-2 md:px-8 ">
           <div class="col-span-1 md:col-span-6 lg:col-span-4">
             <div class="border border-[#E9E9E9] bg-[#FFF] rounded-2xl flex items-center gap-2 flex-col md:flex-row ">
               <div class=" w-full py-4 px-4 ">
@@ -271,7 +271,7 @@
                 <h1 class="text-2xl font-extrabold ">Commercial</h1>
                 <p class="text-[16px] leading-8">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
                   <div class="">
-                    <button class=" flex items-center gap-2 text-[20px] font-extrabold">View Details <span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
+                    <button class=" flex items-center  gap-2 text-[20px] font-extrabold">View Details <span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
                   </div>
                 </p>
               </div>
@@ -314,6 +314,77 @@
         </section>
 
       </section>
+
+
+<!-- Read Our Articles and News -->
+
+
+<section>
+  <div class="text-center">
+    <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2 px-5   m-auto"><i class="fa-solid fa-arrow-right"></i><span>Rinterio News</span></button>
+    <h1 class="text-2xl font-extrabold py-4 px-4 md:text-3xl">Read Our Articles and News</h1>
+    <small class="text-[16px] font-medium leading-7">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</small>
+  </div>
+
+  <section class="py-6 px-6 grid pb-16 grid-cols-1 gap-8 lg:grid-cols-3">
+
+   <div class="md:grid-cols-3 lg:grid-cols-1">
+    <div class="px-4 bg-white py-4 rounded-2xl flex flex-col items-center gap-6 md:flex-row lg:flex-col ">
+    <div class="w-full ">
+      <img class="m-auto" src="./assets/article1.png" alt="">
+    </div>
+      <div>
+        <div class="flex items-center gap-8 py-4 ">
+          <span class="flex items-center gap-3"><i class="fa-solid fa-calendar-days"></i> July14, 2024</span>
+          <span class="flex items-center gap-3"><i class="fa-regular fa-user"></i>By Admin</span>
+        </div>
+        <h1 class="text-2xl font-extrabold py-4 ">How to choose the furniture right  of your home.</h1>
+        <p class="text-[16px] font-medium leading-7 ">The barn house captivates with its blend of rustic charm and modern. </p>
+        <button class="flex items-center gap-3 py-3">Read More<span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
+      </div>
+    </div>
+   </div>
+
+
+   <div class="md:grid-cols-3 lg:grid-cols-1">
+    <div class="px-4 bg-white py-4 rounded-2xl flex flex-col items-center gap-6 md:flex-row lg:flex-col ">
+    <div class="w-full">
+      <img class="m-auto" src="./assets/article2.png" alt="">
+    </div>
+      <div>
+        <div class="flex items-center gap-8 py-4 ">
+          <span class="flex items-center gap-3"><i class="fa-solid fa-calendar-days"></i> July14, 2024</span>
+          <span class="flex items-center gap-3"><i class="fa-regular fa-user"></i>By Admin</span>
+        </div>
+        <h1 class="text-2xl font-extrabold py-4 ">How to choose the furniture right  of your home.</h1>
+        <p class="text-[16px] font-medium leading-7 ">The barn house captivates with its blend of rustic charm and modern. </p>
+        <button class="flex items-center gap-3 py-3">Read More<span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
+      </div>
+    </div>
+   </div>
+
+
+   <div class="md:grid-cols-3 lg:grid-cols-1">
+    <div class="px-4 bg-white py-4 rounded-2xl flex flex-col items-center gap-6 md:flex-row lg:flex-col ">
+    <div class="w-full">
+      <img class="m-auto" src="./assets/article3.png" alt="">
+    </div>
+      <div>
+        <div class="flex items-center gap-8 py-4 ">
+          <span class="flex items-center gap-3"><i class="fa-solid fa-calendar-days"></i> July14, 2024</span>
+          <span class="flex items-center gap-3"><i class="fa-regular fa-user"></i>By Admin</span>
+        </div>
+        <h1 class="text-2xl font-extrabold py-4 ">How to choose the furniture right  of your home.</h1>
+        <p class="text-[16px] font-medium leading-7 ">The barn house captivates with its blend of rustic charm and modern. </p>
+        <button class="flex items-center gap-3 py-3">Read More<span class=" bg-navbtn rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span></button>
+      </div>
+    </div>
+   </div>
+
+
+   </div>
+  </section>
+</section>
     </main>
     <footer></footer>
   </body>
