--- a/index.html
+++ b/index.html
@@ -317,6 +317,49 @@
 <!-- Read Our Articles and News section here -->
 
 
+<!-- my section star here -->
+ <section class="my-14">
+  <div class="text-center">
+    <h1 class="text-7xl font-extrabold">FAQ</h1>
+    <hr class="w-[150px] mx-auto h-0.5 bg-[#8922d89c]">
+    <p class="text-[16px] font-medium px-3 mt-3 text-gray-500">frequently asked questions, get knowledge befere hand</p>
+  </div>
+  <div class="mx-6 my-6 lg:mx-20">
+    <div class="collapse collapse-plus  shadow-lg ">
+      <input type="radio" name="my-accordion-3" checked="checked" />
+      <div class="collapse-title text-xl font-medium bg-[#8922d89c] pb-2">what are main features?</div>
+      <div class="collapse-content">
+        <p><span class="font-bold">This is the first item's accordion body.</span> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow</p>
+      </div>
+    </div>
+    <div class="collapse mt-6 collapse-plus shadow-lg">
+      <input type="radio" name="my-accordion-3" />
+      <div class="collapse-title text-xl font-medium bg-[#8922d89c] pb-2">do i have to pay again after trial</div>
+      <div class="collapse-content">
+        <p><span class="font-bold">This is the second item's accordion body.</span> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow.</p>
+      </div>
+    </div>
+    <div class="collapse mt-6 collapse-plus shadow-lg">
+      <input type="radio" name="my-accordion-3" />
+      <div class="collapse-title text-xl font-medium bg-[#8922d89c] pb-2">how cal i get started after trial?</div>
+      <div class="collapse-content ">
+        <p><span class="font-bold ">This is the third item's accordion body.</span> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow.</p>
+      </div>
+    </div>
+    <div class="collapse mt-6 collapse-plus shadow-lg ">
+      <input type="radio" name="my-accordion-3" />
+      <div class="collapse-title text-xl font-medium bg-[#8922d89c] pb-2">can i be refunded if am not satisfied?</div>
+      <div class="collapse-content ">
+        <p><span class="font-bold">This is the third item's accordion body.</span> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow.</p>
+      </div>
+    </div>
+   
+  </div>
+ </section>
+
+
+<!-- my section end here -->
+
 <section>
   <div class="text-center">
     <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2 px-5   m-auto"><i class="fa-solid fa-arrow-right"></i><span>Rinterio News</span></button>
