--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <h1 class="text-2xl font-extrabold my-4 md:text-3xl lg:text-4xl">Our Works Process</h1>
           <small class="text-[16px] text-center pb-4  font-medium leading-6 md:text-[18px]">The barn house captivates with its blend of rustic charm and modern sophistication, <br class="hidden md:block"> featuring weathered wood, sleek metal accents.</small>
         </div>
-        <section class="mx-8 my-3 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
+        <section class="mx-8 my-3 grid grid-cols-1 gap-6 md:grid-cols-2  lg:grid-cols-4 ">
 
           <div class="bg-cardone py-6 px-4 rounded-lg">
             <div>
@@ -254,7 +254,7 @@
      
 
 
-      <section class="">
+      <section class="container m-auto overflow-hidden">
         <div class="text-center pt-20 px-5">
             <button class="flex items-center gap-2 bg-bannerbtn rounded-full py-2 px-5   m-auto"><i class="fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
             <h1 class="text-2xl font-extrabold my-4 md:text-3xl lg:text-4xl">Our Latest Portfolio</h1>
@@ -278,7 +278,7 @@
             </div>
             <div class="min-h-[100px] rounded-lg shadow border border-[#E9E9E9] bg-[#FFF] md:col-span-6 lg:col-span-4">
                 <div class="w-full">
-                    <img class="p-4 w-full md:w-[400px] md:h-[300px] lg:min-w-[430px] lg:h-[350px]"  src="./assets/img2.png" alt="">
+                    <img class="p-4 w-full  md:h-[300px] overflow-hidden md:w-full lg:min-w-[400px] lg:h-[350px] "  src="./assets/img2.png" alt="">
                 </div>
             </div>
             <div class="min-h-[100px] rounded-lg shadow border border-[#E9E9E9] bg-[#FFF] md:col-span-6 lg:col-span-3">
@@ -480,7 +480,7 @@
 
 
     </main>
-    <footer class="bg-[#1C1C1C] text-white pb-20">
+    <footer class="bg-[#1C1C1C] text-white pb-20 px-3">
      <div class="flex items-center  justify-center pt-24 gap-2">
       <span class="gap-2  bg-[#ABEF5F] text-black rounded-[52px] "><i class="fa-solid fa-arrow-right p-[10px] -rotate-45"></i></span>
       <h1 class="gap-2 text-2xl font-extrabold ">Rinterio</h1>
